# mysql_udfs

./: README.md
udf_aspell/: .gitignore  README.md  configure.ac  udf_aspell.c
udf_aspell/include/: udf_aspell.h
udf_aspell/src/: Makefile.am  udf_aspell.c
udf_benford/: .gitignore  README.md  configure.ac  udf_benford.c
udf_benford/src/: Makefile.am
